Fix dark mode (by removing it)

--- a/website/src/index.css
+++ b/website/src/index.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 @plugin "daisyui" {
-  themes: cupcake --default, dim --prefersdark;
+  themes: cupcake --default
 }
 
 * {
